--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <h1>Time of day Welcome page</h1>
+            <form method='POST' action='/PageGenerator'>
+                <label>What's your name?</label>
+                <input type='text' name='username'/>
+                <input type='submit' value="Submit!"/>
+            </form>
+        </div>
     </body>
 </html>
